added no item text for appointmentWidget

--- a/src/app/components/appointment-widget/appointment-widget.component.html
+++ b/src/app/components/appointment-widget/appointment-widget.component.html
@@ -1,6 +1,7 @@
 <div class="appointmentWidget">
   <div class="header">Termine</div>
   <div class="body">
+    <div *ngIf="appointmentList.length === 0">Keine aktuellen Termine</div>
     <div class="item" *ngFor="let appointment of appointmentList; index as i">
       <span>{{appointment.Datum}}</span>
       <h2>{{appointment.Thema}}</h2>
