updated style for header in appointment detail view

--- a/src/app/components/appointment-header/appointment-header.component.html
+++ b/src/app/components/appointment-header/appointment-header.component.html
@@ -1,3 +1,32 @@
+<div class="wrapper">
+  <div class="navWrapper">
+    <div class="navBar">
+      <div class="backWrapper" (click)="navigateBack()">
+        <img src="/assets/icons/arrow-left.svg" />
+        <span>Zurück</span>
+      </div>
+      <div class="logoWrapper">
+        <app-page-logo [isSmall]="true"></app-page-logo>
+      </div>
+      <div class="downloadWrapper">
+        <a href="{{appointmentFileUrl}}" download>
+          <img src="/assets/icons/icon-pdf.svg" />
+          <span>PDF herunterladen</span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="appointmentInfoWrapper">
+    <div class="content">
+      <span>{{appointmentDate}}</span>
+      <h1>{{appointmentTitle}}</h1>
+    </div>
+  </div>
+</div>
+
+
+
+<!--
 <div class="appointmentHeaderWrapper">
   <div class="navBar">
     <div class="backWrapper" (click)="navigateBack()">
@@ -22,3 +51,4 @@
   </div>
 
 </div>
+-->
