updated article header and footer to dsekstop fullwidth

--- a/src/app/components/appointment-header/appointment-header.component.scss
+++ b/src/app/components/appointment-header/appointment-header.component.scss
@@ -1,7 +1,8 @@
 @import "../../../variables.scss";
 .wrapper {
+
   position: sticky;
-  top:0px;
+  top:0;
 }
 .navWrapper {
   background: #252931;
