--- a/src/app/components/article-footer/article-footer.component.scss
+++ b/src/app/components/article-footer/article-footer.component.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #252931;
+
   .footerInner {
     width: 1020px;
     background: #252931;
