added team card cms support for selectionsquad page

--- a/src/app/components/team-card/team-card.component.html
+++ b/src/app/components/team-card/team-card.component.html
@@ -3,7 +3,7 @@
     <h2>{{teamName}}</h2>
   </div>
   <div class="body">
-    <img class="teamImage" src="{{teamImageUrl}}" />
+    <img class="teamImage" src="{{env.strapiUrl + teamImageUrl}}" />
     <p class="trainerItem">Trainer: <span>{{trainer}}</span></p>
     <div class="trikotsWrapper">
       <div class="headerTrikots">
