--- a/src/app/components/page-logo/page-logo.component.html
+++ b/src/app/components/page-logo/page-logo.component.html
@@ -1,13 +1,9 @@
 <div *ngIf="!isSmall" class="logoWrapper">
-  <img class="logoBeacon left" src="/assets/logo/kiel-wappen.svg" />
-  <h1 class="logoText">HG REGION FÖRDE</h1>
-  <img class="logoBeacon right" src="/assets/logo/ploen-wappen.svg" />
+  <img class="logoBeacon left" src="/assets/logo/logo.svg" />
 </div>
 
 <div *ngIf="isSmall">
   <div class="logoWrapper">
-    <img class="logoBeacon left small" src="/assets/logo/kiel-wappen.svg" />
-    <h1 class="logoText small">HG REGION FÖRDE</h1>
-    <img class="logoBeacon right small" src="/assets/logo/ploen-wappen.svg" />
+    <img class="logoBeacon left small" src="/assets/logo/logo.svg" />
   </div>
 </div>
