--- a/src/app/components/qualified-person-card/qualified-person-card.component.scss
+++ b/src/app/components/qualified-person-card/qualified-person-card.component.scss
@@ -31,6 +31,9 @@
         padding-top: 10px;
         display: flex;
         align-items: center;
+        img {
+          height: 20px;
+        }
         span {
           margin-left: 5px;
         }
