--- a/src/app/pages/clubs/clubs.component.scss
+++ b/src/app/pages/clubs/clubs.component.scss
@@ -2,19 +2,13 @@
 
 
 .clubsWrapper {
-  padding: 40px 50px 50px;
-  @include media-breakpoint-sm {
-    padding:25px 5px 5px;
-  }
+  @apply
+  px-2 mt-2 mb-2
+  lg:px-10;
+   
   .clubsGrid {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap:10px;
-    @include media-breakpoint-md {
-      grid-template-columns: repeat(3, 1fr);
-    }
-    @include media-breakpoint-sm {
-      grid-template-columns: repeat(1, 1fr);
-    }
+    @apply
+    grid gap-2 grid-cols-2
+    lg:grid-cols-6;
   }
 }
