--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,78 +1,118 @@
 @import "../../../variables.scss";
 
-.homeWrapper {
-  @include media-breakpoint-sm {
-    padding-top:20px;
-  }
+.moreNewsTitle {
+  @apply 
+  mt-5 mb-5 font-bold hidden 
+  sm:hidden 
+  md:px-2 md:block 
+  lg:block lg:text-2xl lg:px-10;
+}
+.loadMoreArticlesWrapper { 
+  @apply 
+  px-2 flex justify-end mb-2
+  lg:px-10;
+}
+.newsOverviewPageLink {
+  border: 1px solid #252931;
+  @apply 
+    p-1 text-xs;
+}
+.newsOverviewPageLink:hover {
+  transition: 0.8s;
+  background: #252931;
+  @apply 
+    text-white;
+}
+.sectionTitle {
+  @apply
+  mt-2 mb-2 font-bold px-2 text-lg
+  lg:text-2xl lg:px-10 lg:mt-5 lg:mb-5;
 }
 .newsArea {
-  padding: 40px 50px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
-  background-size: cover;
-  @include media-breakpoint-lg {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @include media-breakpoint-sm {
-    background: none;
-    padding-top: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    grid-template-columns: repeat(1, 1fr);
-  }
-
+  @apply  
+  grid gap-2 px-2 mt-2 mb-2 grid-cols-2
+  sm:gap-2 sm:px-2 sm:mt-2 sm:mb-2 sm:grid-cols-2 
+  md:grid-cols-2 
+  lg:grid-cols-5 lg:px-10;
 }
 
 
 .homeWidgetsWrapper {
-  padding-left:50px;
-  padding-right:50px;
-  display: grid;
-  gap:10px;
-  grid-template-columns: repeat(2, 1fr);
-  @include media-breakpoint-sm {
-    padding-left:5px;
-    padding-right:5px;
-    grid-template-columns: repeat(1, 1fr);
-  }
+  @apply 
+  grid gap-2 px-2 mb-2
+  lg:grid-cols-2 lg:px-10
 }
-
-
 
 .sponsoren {
   .header {
-    padding:10px;
+    @apply 
+    p-2 text-white;
     background: #252931;
-    color:white;
   }
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    gap: 10px;
+  .sponsorGrid {
+    @apply
+    grid grid-cols-2 gap-0
+    sm:grid-cols-3 sm:gap-0
+    lg:grid-cols-8 lg:gap-2;
     background: white;
     border-radius: 2px;
-    @include media-breakpoint-lg {
-      grid-template-columns: auto auto ;
-    }
-    @include media-breakpoint-sm {
-      padding: 0;
-      grid-template-columns: auto auto ;
-    }
-    @include  media-breakpoint-xs {
-      grid-template-columns: auto ;
 
-    }
     .sponsorItem {
-      padding:10px;
-      border-radius: 2px;
       img {
+        @apply 
+        bg-gray-50 p-2
+        lg:bg-transparent;
+        width: 100%;
         height: 80px;
+        object-fit: contain;
         cursor: pointer;
-
       }
   }
 
+  }
+}
+
+.leagueFacts {
+  @apply
+  grid gap-2 px-2 mb-2 grid-cols-2
+  lg:grid-cols-4 lg:px-10;
+  .factItem {
+    @apply
+    text-white text-center p-5 flex flex-col items-center justify-center h-40;
+    background: #252931;
+  
+  }
+  .factItemIcon {
+    height: 50px;
+  } 
+}
+.seasonOverview {
+  @apply
+  grid gap-2 px-2 mb-2
+  lg:grid-cols-3 lg:px-10;
+  .seasonItem {
+    @apply
+    bg-white;
+    .header {
+      background: #252931;
+      @apply 
+      text-white p-2;
+    }
+    .clubsWrapper {
+      @apply
+      grid gap-2 p-2
+      lg:grid-cols-2;
+      .club {
+        @apply
+        bg-slate-100 text-center p-1 flex;
+      }
+      .teamLogo {
+        @apply
+        mr-2;
+        height: 30px;
+      }
+
+    }
   }
 }
 .landingGallery {
