--- a/src/app/pages/trainer/trainer.component.scss
+++ b/src/app/pages/trainer/trainer.component.scss
@@ -1,13 +1,9 @@
 @import "../../../variables.scss";
 
 .trainerWrapper {
-  padding: 40px 50px 10px;
-  @include media-breakpoint-sm {
-    padding-top: 25px;
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
+  @apply
+  px-2 mt-2 mb-2
+  lg:px-10;
   .newsGrid {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
