moved cookie text

--- a/src/app/pages/impress/impress.component.html
+++ b/src/app/pages/impress/impress.component.html
@@ -4,3 +4,4 @@
     {{impressObject.impressum.data.attributes.Content}}
   </markdown>
 </div>
+<script id="CookieDeclaration" src="https://consent.cookiebot.com/b8a155c8-b0b7-4cb0-8b49-bf0d9e7353ae/cd.js" type="text/javascript" async></script>
