--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,14 @@ body {
   background: #DEDEDE;
 }
 
-h2 {
-  @apply 
-  text-lg font-bold mt-2 mb-2;
+@layer base {
+  h1 {
+    @apply text-3xl;
+  }
+  h2 {
+    @apply text-2xl;
+  }
+  h3 {
+    @apply text-xl;
+  }
 }
