--- a/src/app/components/club-card/club-card.component.scss
+++ b/src/app/components/club-card/club-card.component.scss
@@ -1,4 +1,5 @@
 .clubCardWrapper {
+  min-height: 70px;
   padding:10px;
   border-radius: 2px;
   display: flex;
@@ -12,11 +13,22 @@
     margin:0;
     font-size: 19px;
   }
+  .hoverText {
+    border: 1px solid #252931;
+    padding:5px;
+  }
+  .hoverText:hover {
+    transition: 0.8s;
+    background: #252931;
+    color:white;
+  }
 }
 
 .clubCardWrapper:hover {
-  transition: 0.8s;
+  justify-content: center;
+  transition: 1.8s;
   background: #d2d2d2;
   cursor: pointer;
-  text-decoration: underline;
+  box-shadow: 1px 0px 5px #484848;
+
 }
