added clubs list in nav

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -30,6 +30,7 @@
     <li>Ergebnisse</li>
     <li>Vereine</li>
     -->
+    <li (click)="routeChanged('/vereine')">Vereine</li>
     <li (click)="routeChanged('/jugend')">Jugend</li>
     <li (click)="routeChanged('/auswahl-kader')">Auswahlkader</li>
     <li (click)="routeChanged('/schiedsrichter')">Schiedsrichter</li>
