added map view for club detail page

--- a/src/app/pages/club-detail/club-detail.component.html
+++ b/src/app/pages/club-detail/club-detail.component.html
@@ -6,6 +6,7 @@
     </div>
     <app-page-logo [isSmall]="true" ></app-page-logo>
   </div>
+  <app-map [clubId]="clubId"></app-map>
   <div @fadeIn>
   <div class="clubInfoWrapper">
     <div class="clubInfoCard">
