--- a/src/app/pages/club-detail/club-detail.component.scss
+++ b/src/app/pages/club-detail/club-detail.component.scss
@@ -78,6 +78,7 @@
     height: 100px;
   }
   .clubInfoText {
+    text-align: center;
     .websiteLink {
       color:#252931;
       text-decoration: none;
